# Trident

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
crates/api/: Cargo.toml  Dockerfile  build.rs
crates/api/src/: config.rs  main.rs
crates/api/src/services/: events.rs
crates/backfill/: Cargo.toml
crates/backfill/src/: db.rs  main.rs  parser.rs  rpc_client.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  types.rs
crates/indexer/: Cargo.toml  Dockerfile
crates/indexer/src/: config.rs  main.rs  metrics.rs
crates/indexer/src/alerting/: mod.rs
crates/indexer/src/db/: mod.rs
crates/indexer/src/parser/: mod.rs  token_events.rs
crates/indexer/src/redis_stream/: mod.rs
crates/indexer/src/rpc/: mod.rs
crates/indexer/src/streamer/: mod.rs
database/migrations/: 0001_init.sql  0003_alert_webhook.sql  0003_api_keys.sql
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf
docs/: deployment.md
fly/: api.toml  grpc-api.toml  indexer.toml
proto/: trident.proto
sdk/python/: README.md  pyproject.toml
sdk/python/src/trident_indexer/: __init__.py  async_client.py  client.py  errors.py  types.py
sdk/python/tests/: conftest.py  test_async_client.py  test_client.py
sdk/react/: package.json  tsconfig.json
sdk/react/src/: context.tsx  index.ts  useContractEvents.ts  useSubscription.ts
sdk/react/tests/: hooks.test.tsx
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: errors.ts  index.ts
sdk/typescript/tests/: client.test.ts
services/api/: Dockerfile  go.mod  go.sum  main.go
services/api/config/: config.go  config_test.go
services/api/handlers/: apikeys.go  events.go  events_test.go  health.go  health_test.go
services/api/middleware/: auth.go  cors.go  cors_test.go  middleware_test.go  timeout.go  timeout_test.go
services/api/ws/: consumer.go  hub_test.go
