[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trident-indexer"
version = "0.1.0"
description = "Python client SDK for the Trident Soroban event indexer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["stellar", "soroban", "blockchain", "indexer", "events"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "websocket-client>=1.6",
    "aiohttp>=3.9",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/Telocel-Labs/Trident"
Repository = "https://github.com/Telocel-Labs/Trident"

[tool.hatch.build.targets.wheel]
packages = ["src/trident_indexer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/trident_indexer"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
